chore(pom): add versions for maven plugins